--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ margin: 0rem !important;
                   <div class="footer_contact-info">
                     <div class="text-style-muted text-size-medium">We are open:</div>
                     <div class="padding-bottom padding-xsmall"></div>
-                    <div class="text-style-title-small">Monday to Friday 8:00pm to  5:00pm<br>Flexible by appointment on weekends.</div>
+                    <div class="text-style-title-small">Monday to Friday 8:00am to  5:00pm<br>Flexible by appointment on weekends.</div>
                   </div>
                 </div>
               </div>
