--- a/index.html
+++ b/index.html
@@ -696,10 +696,10 @@ margin: 0rem !important;
             <div class="container-large">
               <div class="padding-section-xlarge">
                 <div class="footer_bottom_content">
-                  <a id="w-node-_50505ddf-95f0-37c2-093c-b8556bc98cfb-6bc98cd7" href="https://www.finsweet.com/" target="_blank" class="footer_bottom_logo-link w-inline-block"><img src="images/M.I.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 20vw" srcset="images/M.I-p-500.png 500w, images/M.I-p-800.png 800w, images/M.I-p-1080.png 1080w, images/M.I-p-1600.png 1600w, images/M.I-p-2000.png 2000w, images/M.I.png 2025w" alt="MIA Pest Control Vermin Control extermination griffith nsw logo riverina murrambidgee irrigaiton area leeton"></a>
+                  <a id="w-node-_50505ddf-95f0-37c2-093c-b8556bc98cfb-6bc98cd7" href="https://www.miapestcontrol.com.au/" target="_blank" class="footer_bottom_logo-link w-inline-block"><img src="images/M.I.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 20vw" srcset="images/M.I-p-500.png 500w, images/M.I-p-800.png 800w, images/M.I-p-1080.png 1080w, images/M.I-p-1600.png 1600w, images/M.I-p-2000.png 2000w, images/M.I.png 2025w" alt="MIA Pest Control Vermin Control extermination griffith nsw logo riverina murrambidgee irrigaiton area leeton"></a>
                   <div id="w-node-_50505ddf-95f0-37c2-093c-b8556bc98cfd-6bc98cd7" class="footer_bottom_links-list">
-                    <a href="#" class="footer_bottom_link w-inline-block"></a>
-                    <a href="#" class="footer_bottom_link w-inline-block">
+                    
+                    <a href="contact-us.html" class="footer_bottom_link w-inline-block">
                       <div class="text-block">Contact us</div>
                     </a>
                   </div>
